--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -7,6 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": "",
+  "ConnectionString": "mongodb://localhost:27017/coronaVirus",
   "NomeBanco": "coronavirus"
 }
